# tbx

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: dependabot.yml  rust.yml
tbx/: Cargo.toml
tbx-essential/: Cargo.toml
tbx-foundation/: Cargo.toml
tbx-operation/: Cargo.toml
tbx-toolbox/: Cargo.toml
tbx/src/: main.rs
tbx_essential/: Cargo.toml
tbx_essential/resources/: references.json
tbx_essential/src/: lib.rs  number.rs  text.rs  time.rs
tbx_essential/src/number/: byte.rs  primitive.rs  random.rs
tbx_essential/src/text/: essential.rs  hex.rs  message.rs  random.rs  regex.rs  string.rs  token.rs  uuid.rs
tbx_essential/src/text/hex/: error.rs
tbx_essential/src/text/pattern/: ascii.rs  case.rs  naming.rs
tbx_essential/src/text/random/: ascii.rs
tbx_essential/src/text/regex/: error.rs  matcher.rs  splitter.rs
tbx_essential/src/text/token/: alpha_num.rs  ascii.rs
tbx_essential/src/text/uuid/: error.rs  v4.rs
tbx_essential/src/text/version/: semantic.rs
tbx_essential/src/text/version/semantic/: build.rs  compare.rs  error.rs  parse.rs  prerelease.rs
tbx_essential/src/time/: calendar.rs  datetime.rs  duration.rs  epoch.rs  error.rs  monotonic.rs  timezone.rs
tbx_foundation/: Cargo.toml
tbx_foundation/src/: lib.rs
tbx_model/: Cargo.toml
tbx_model/src/: dropbox.rs  lib.rs
tbx_model/src/dropbox/: stone.pest  stone.rs
tbx_operation/: Cargo.toml
tbx_operation/src/: lib.rs
